<resources>
  <string name="app_name">Kimlic</string>
  <string name="google_maps_API_key">AIzaSyDSjiySTrfkIkTwZhim9aroVIb7r5_CUlU</string>
  <string name="kimlic_logo">Kimlic Logo</string>
  <string name="create_your_passcode">Create your Passcode</string>
  <string name="textplaceholder">...</string>
  <string name="You_have_to_enter_passcode_every_time_you_want_to_open">You have to enter passcode every time you want to open Kimlic app.</string>
  <string name="q">fvdvdv</string>
  <string name="enter_old_passcode">Enter old Passcode</string>
  <string name="enter_your_old_passcode">Enter Your old passcode</string>
  <string name="confirm_passcode">Confirm passcode</string>
  <string name="enter_the_passcode_againe">Enter the passcode again</string>
  <string name="enter_passcode">Enter Passcode</string>
  <string name="enter_your_passcode_to_proceed">Enter Your passcode to proceed</string>
  <string name="try_again">Try  again</string>
  <string name="passcode_didnt_match">Passcode didn\'t match</string>
  <string name="_0">0</string>
  <string name="_1">1</string>
  <string name="_2">2</string>
  <string name="_3">3</string>
  <string name="_4">4</string>
  <string name="_5">5</string>
  <string name="_6">6</string>
  <string name="_7">7</string>
  <string name="_8">8</string>
  <string name="_9">9</string>
  <string name="_10">10</string>
  <string name="_11">11</string>
  <string name="_12">12</string>
  <string name="ok">Ok</string>
  <string name="OK">OK</string>
  <string name="place_your_finger">Place Your Finger</string>
  <string name="please_approve_fingerprint_authentication_by_your_fingerprint">Please approve fingerprint \n authentication by your fingerprint</string>
  <string name="fingerprint_logo">FingerPrint logo</string>
  <string name="cheking">Cheking…</string>
  <string name="skip">Skip</string>
  <string name="use_touch_id">Use Touch ID</string>
  <string name="use_passcode">*** Use Passcode</string>
  <string name="or">or</string>
  <string name="please_enter_the_missing_words_from_your_mnemonic_passphrase">Please enter the missing words from your mnemonic passphrase</string>
  <string name="cancel_and_return">Cancel and return</string>
  <string name="verify">Verify</string>
  <string name="mnemonic_passphrase">Mnemonic Passphrase</string>
  <string name="write_down_these_words_store_them_in_a_safe_place">Write down these words, store them \n in a safe place. They can\'t be recovered.</string>
  <string name="phone_number">Phone Number</string>
  <string name="upper_arc">Upper arc</string>
  <string name="face_contour">Face contour</string>
  <string name="capture">Capture</string>
  <string name="id_back_side">ID back side</string>
  <string name="scanning">Scanning…</string>
  <string name="show_the_back_side_your_id_card">Show the Back side your ID-Card</string>
  <string name="show_the_front_side_your_id_card">Show the Front side your ID-Card</string>
  <string name="id_front_side">ID front side</string>
  <string name="front_view">Front View</string>
  <string name="take_your_portrait">Take your Portrait</string>
  <string name="id_card_contour">ID card contour</string>
  <string name="you_cant_use_camera_without_permissions">You can\'t use camera without permission</string>
  <string name="picture">Picture</string>
  <string name="description_info">Info</string>
  <string name="request_permission">This sample needs camera permission.</string>
  <string name="camera_error">This device doesn\'t support Camera2 API.</string>
  <string name="front_side_of_your_drivers_license">Front Side of the document</string>
  <string name="driver_license">Driver License</string>
  <string name="you_cant_use_camera_vithout_permissions">You can\'t use camera without permission</string>
  <string name="face_photo">Face photo</string>
  <string name="back_side_your_drivers_license">Back Side your Drivers License</string>
  <string name="congratulations">Congratulations</string>
  <string name="congratulations_">Congratulations !</string>
  <string name="your_phone_number_have_been_verified">Your Phone Number have \n been verified</string>
  <string name="lock">Lock</string>
  <string name="vetify">Vetify</string>
  <string name="verification_code">Verification Code</string>
  <string name="your_id_secured">Your ID Secured !</string>
  <string name="your_account_passcode_is_created">Your account Passcode is created.</string>
  <string name="your_email_have_been_verified">Your email have been verified.</string>
  <string name="email">Email</string>
  <string name="photo">Photo</string>
  <string name="create_new_identity">Create new identity</string>
  <string name="recover_my_identity">Recover my identity</string>
  <string name="accept">Accept</string>
  <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
  <string name="last_modified_23_july_2017">Last modified 23 July 2017</string>
  <string name="last_modified_24_october_2018">Last modified 24 October 2018</string>
  <string name="please_paste_type_your_mnemonic_passphrase_to_recover_your_identity">Please paste/type your mnemonic passphrase \n to recover your identity</string>
  <string name="copy">Copy</string>
  <string name="continue_">Continue</string>
  <string name="paste_type_here">Paste/type here…</string>
  <string name="phrases_copied_to_buffer">Phrases copied to buffer</string>
  <string name="next">Next</string>
  <string name="phone_is_not_valid">Phone is not valid</string>
  <string name="error">error</string>
  <string name="error_">Error!</string>
  <string name="import_">Import</string>
  <string name="create_new">Create new</string>
  <string name="change_email_address">Change email address</string>
  <string name="verify_your_email">Verify your email</string>
  <string name="code_sent_to_email">Code sent to %1$s</string>
  <string name="phone_logo">Phone logo</string>
  <string name="verify_your_number">Verify your number</string>
  <string name="code_sent_to">Code Sent to %1$s</string>
  <string name="change_phone_number">Change phone number</string>
  <string name="email_address">Email address</string>
  <string name="your_phone_number">Your Phone Number</string>
  <string name="why_we_need_your_phone_number">Why we need your phone number ?</string>
  <string name="your_id_have_been_verified">Your ID have been verified</string>
  <string name="sign_out">Sign out</string>
  <string name="profile_settings">Profile Settings</string>
  <string name="warning">Warning</string>
  <string name="arrow">Arrow</string>
  <string name="passcode">Passcode</string>
  <string name="protect_my_id">Protect my ID with Passcode</string>
  <string name="account_recovery">Account Recovery</string>
  <string name="use_my_fingerprint_to_access_kimlic">Use my fingerprint to access Kimlic</string>
  <string name="enable_fingerprint">Enable Fingerprint</string>
  <string name="back_up_your_credentials">Back up your credentials</string>
  <string name="terms_and_conditions"><![CDATA[Terms & Conditions]]></string>
  <string name="accept_">Accept</string>
  <string name="close">Close</string>
  <string name="privacy_policy">Privacy Policy</string>
  <string name="change_passcode">Change passcode</string>
  <string name="touch_id">Touch ID</string>
  <string name="your_fingerprint_is_enabled">Your Fingerprint is Enabled</string>
  <string name="your_mnemonic_passphrase_matched">Your mnemonic passphrase matched</string>
  <string name="go_back">Go Back</string>
  <string name="copy_to_buffer">Copy to buffer</string>
  <string name="ok_i_save_the_passphrase">OK, I save the passphrase</string>
  <string name="country">Country</string>
  <string name="delete_identity">Delete Identity</string>
  <string name="user_photo">User photo</string>
  <string name="secureid">SecureID</string>
  <string name="secure_your_identity">Secure your Identity</string>
  <string name="you_have_main_risks">Your have %1$d main security risks</string>
  <string name="enable_account_recovery">Enable Account Recovery</string>
  <string name="create_passcode">Create Passcode</string>
  <string name="assurance">Assurance</string>
  <string name="shevron_right">shevron right</string>
  <string name="save">Save</string>
  <string name="your_full_name">Your Full Name</string>
  <string name="first_name">First Name</string>
  <string name="last_name">Last Name</string>
  <string name="cancel">Cancel</string>
  <string name="drivers_license">Drivers License</string>
  <string name="document">Document</string>
  <string name="choose_your_document_type">Choose your Document type</string>
  <string name="name">Name</string>
  <string name="decentralized_identity">Decentralized identity</string>
  <string name="all_your_credentials_stored_in_private_blockchain">All your credentials stored in \n private blockchain</string>
  <string name="cloud_effect">Cloud effect</string>
  <string name="icon">Icon</string>
  <string name="tutorial">Tutorial</string>
  <string name="fast_secure_access">Fast, Secure Access</string>
  <string name="manage_your_accounts">Manage your Accounts</string>
  <string name="verify_passphrase">Verify Passphrase</string>
  <string name="verify_email">Verify email</string>
  <string name="verify_number">Verify number</string>
  <string name="_90">+90</string>
  <string name="plus_character">+</string>
  <string name="sign_in_with_your_touch_id">Sign in with your Touch ID</string>
  <string name="touch_id_for_quot_kimlic_quot">Touch id for \"Kimlic\"</string>
  <string name="about_kimlic">About Kimlic</string>
  <string name="signup_recovery">Signup recovery</string>
  <string name="top_texture">Top texture</string>
  <string name="updating">Updating…</string>
  <string name="your_information_updating_on_kimlic_blockchain">Your information updating on \n Kimlic Blockchain</string>
  <string name="verify_your_number_">Verify Your Number!</string>
  <string name="change_number_">Change Number</string>
  <string name="number_is_not_verified">555 458 39 40 is not verified</string>
  <string name="send_verification_code">Send Verification Code</string>
  <string name="balance">Balance %1$d KIM</string>
  <string name="add_your_email">Add your email</string>
  <string name="add_your_full_name">Add your full name</string>
  <string name="add_your_phone">Add your phone</string>
  <string name="verify_your_id">Verify your ID</string>
  <string name="addrerss_logo">Addrerss logo</string>
  <string name="your_address">Your Address</string>
  <string name="add_your_address">Add your address</string>
  <string name="submit">Submit</string>
  <string name="search_logo">Search logo</string>
  <string name="add_your_name">Add your name</string>
  <string name="id_assurance">ID assurance 15%</string>
  <string name="photo_camera_image">Photo camera Image</string>
  <string name="add_your_photo">Add Your Photo</string>
  <string name="rounded_background">Rounded Background</string>
  <string name="all_your_credentials_stored_in_private_blockch">All your credentials stored \n in private blockchain</string>
  <string name="forget_your_password_use_kimlic_connect_to_login">Forget your password, use Kimlic \n connect to login</string>
  <string name="rounded_logo">Rounded logo</string>
  <string name="your_identity_is_secured">Your Identity is Secured!</string>
  <string name="mnemonic_passphrase_created">Mnemonic Passphrase created.</string>
  <string name="now_you_can_use_your_fingerprint_to_open_kimlic_app">Now, You can use your fingerprint \n to open Kimlic app</string>
  <string name="full_name_added_to_your_identity_successfully">Full name added to your \n Identity successfully</string>
  <string name="logo">Logo</string>
  <string name="your_address_added_successfully">Your address added successfully</string>
  <string name="your_identity_have_been_verified">Your identity have been verified</string>
  <string name="bottom_menu_background">Bottom menu background</string>
</resources>