<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/bgLight"
  tools:context="com.kimlic.phrase.MnemonicPhraseActivity"
  >

  <LinearLayout
    android:id="@+id/llRootUpperPhrase"
    android:layout_width="310dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:gravity="center"
    android:orientation="vertical"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
      android:id="@+id/tvPhraseTitle"
      android:layout_width="310dp"
      android:layout_height="match_parent"
      android:layout_marginBottom="16dp"
      android:gravity="center"
      android:text="@string/mnemonic_passphrase"
      android:textColor="@color/lightBlue"
      android:textSize="22sp"/>

    <TextView
      android:id="@+id/tvPhraseSubtitle"
      android:layout_width="310sp"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:gravity="center"
      android:text="@string/please_write_down_these_words_and_store_them_in_a_safe_place_as_they_can_t_be_recovered"
      android:textColor="@color/lightBlue"
      android:textSize="14sp"/>

  </LinearLayout>

  <LinearLayout
    android:id="@+id/llPhraseLayout"
    android:layout_width="310dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintBottom_toTopOf="@id/llRootLowerPhrase"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/llRootUpperPhrase"
    app:layout_constraintVertical_bias="0.515">


    <com.kimlic.phrase.MnemonicPhrase
      android:id="@+id/mpPhrase1"
      style="@style/MnemonicStyle"
      app:mnemonic_phrase_number="@string/_1"/>

    <com.kimlic.phrase.MnemonicPhrase
      android:id="@+id/mpPhrase2"
      style="@style/MnemonicStyle"
      app:mnemonic_phrase_number="@string/_2"/>

    <com.kimlic.phrase.MnemonicPhrase
      android:id="@+id/mpPhrase3"
      style="@style/MnemonicStyle"
      app:mnemonic_phrase_number="@string/_3"/>

    <com.kimlic.phrase.MnemonicPhrase
      android:id="@+id/mpPhrase4"
      style="@style/MnemonicStyle"
      app:mnemonic_phrase_number="@string/_4"/>

    <com.kimlic.phrase.MnemonicPhrase
      android:id="@+id/mpPhrase5"
      style="@style/MnemonicStyle"
      app:mnemonic_phrase_number="@string/_5"/>

    <com.kimlic.phrase.MnemonicPhrase
      android:id="@+id/mpPhrase6"
      style="@style/MnemonicStyle"
      app:mnemonic_phrase_number="@string/_6"/>

    <com.kimlic.phrase.MnemonicPhrase
      android:id="@+id/mpPhrase7"
      style="@style/MnemonicStyle"
      app:mnemonic_phrase_number="@string/_7"/>

    <com.kimlic.phrase.MnemonicPhrase
      android:id="@+id/mpPhrase8"
      style="@style/MnemonicStyle"
      app:mnemonic_phrase_number="@string/_8"/>

    <com.kimlic.phrase.MnemonicPhrase
      android:id="@+id/mpPhrase9"
      style="@style/MnemonicStyle"
      app:mnemonic_phrase_number="@string/_9"/>

    <com.kimlic.phrase.MnemonicPhrase
      android:id="@+id/mpPhrase10"
      style="@style/MnemonicStyle"
      app:mnemonic_phrase_number="@string/_10"/>

    <com.kimlic.phrase.MnemonicPhrase
      android:id="@+id/mpPhrase11"
      style="@style/MnemonicStyle"
      app:mnemonic_phrase_number="@string/_11"/>

    <com.kimlic.phrase.MnemonicPhrase
      android:id="@+id/mpPhrase12"
      style="@style/MnemonicStyle"
      app:mnemonic_phrase_number="@string/_12"/>

  </LinearLayout>

  <LinearLayout
    android:id="@+id/llRootLowerPhrase"
    android:layout_width="310dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:orientation="horizontal"
    android:weightSum="2"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent">

    <Button
      android:id="@+id/btImport"
      style="?android:attr/buttonBarButtonStyle"
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:layout_weight="1"
      android:layout_marginBottom="8dp"
      android:layout_marginEnd="8dp"
      android:background="@drawable/button_rounded"
      android:text="Import"
      android:textColor="@color/lightBlue"
      />

    <Button
      android:id="@+id/btCreatNew"
      style="?android:attr/buttonBarButtonStyle"
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:layout_weight="1"
      android:layout_marginBottom="8dp"

      android:layout_marginStart="8dp"
      android:background="@drawable/button_rounded"
      android:text="Create new"
      android:textColor="@color/lightBlue"
      />

  </LinearLayout>


</android.support.constraint.ConstraintLayout>
