<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="#0273D0">

  <ImageView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="36dp"
    android:background="@drawable/rounded_background_tutorial"
    android:contentDescription="@string/rounded_background"
    app:layout_constraintBottom_toBottomOf="@id/cloudsIv"/>

  <ImageView
    android:id="@+id/cloudsIv"
    android:layout_width="match_parent"
    android:layout_height="260dp"
    android:background="@drawable/ic_tutorial_clouds_effect"
    android:contentDescription="@string/cloud_effect"
    app:layout_constraintBottom_toTopOf="@+id/rootMiddle"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"/>

  <ImageView
    android:id="@+id/tutorialIv"
    android:layout_width="216dp"
    android:layout_height="216dp"
    android:layout_marginBottom="136dp"
    android:background="@drawable/tutorial_3_illustration"
    android:contentDescription="@string/tutorial"
    android:scaleType="fitStart"
    app:layout_constraintBottom_toBottomOf="@+id/cloudsIv"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"/>

  <ImageView
    android:id="@+id/iconIv"
    android:layout_width="40dp"
    android:layout_height="40dp"
    android:layout_marginBottom="64dp"
    android:background="@drawable/ic_aacount_icon_for_tutorial"
    android:contentDescription="@string/icon"
    app:layout_constraintBottom_toBottomOf="@+id/cloudsIv"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"/>

  <LinearLayout
    android:id="@+id/rootMiddle"
    android:layout_width="@dimen/content_width"
    android:layout_height="wrap_content"
    android:layout_marginBottom="112dp"
    android:gravity="center"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent">

    <TextView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginBottom="16dp"
      android:gravity="center"
      android:text="@string/manage_your_accounts"
      android:textColor="@android:color/white"
      android:textSize="@dimen/title_text_size"/>

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:gravity="center"
      android:text="@string/all_your_credentials_stored_in_private_blockch"
      android:textColor="@android:color/white"
      android:textSize="@dimen/subtitle_text_size"/>

  </LinearLayout>

</android.support.constraint.ConstraintLayout>