<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <com.kimlic.video_id_verification.AutoFitTextureView
    android:id="@+id/textureView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"/>

  <ImageView
    android:layout_width="match_parent"
    android:layout_height="64dp"
    android:background="@android:color/white"
    android:contentDescription="@string/upper_arc"/>

  <ImageView
    android:layout_width="296dp"
    android:layout_height="176dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:alpha="0.2"
    android:background="@android:color/white"
    android:contentDescription="@string/id_card_contour"
    app:layout_constraintBottom_toTopOf="@+id/view2"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>

  <ImageView
    android:layout_width="40dp"
    android:layout_height="56dp"
    android:layout_marginBottom="8dp"
    android:alpha="0.2"
    android:background="@android:color/white"
    android:contentDescription="@string/id_front_side"
    app:layout_constraintBottom_toTopOf="@+id/textView"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"/>

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:gravity="center"
    android:text="@string/scanning"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>

  <TextView
    android:id="@+id/textView"
    android:layout_width="match_parent"
    android:layout_height="18dp"
    android:layout_marginBottom="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:gravity="center"
    android:text="@string/show_the_front_side_your_id_card"
    android:textColor="@android:color/white"
    android:textSize="16sp"
    app:layout_constraintBottom_toTopOf="@+id/view2"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"/>

  <Button
    android:id="@+id/captureBt"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:text="@string/capture"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"/>

  <View
    android:id="@+id/view2"
    android:layout_width="match_parent"
    android:layout_height="64dp"
    android:background="@android:color/white"
    app:layout_constraintBottom_toBottomOf="@+id/textureView"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"/>

</android.support.constraint.ConstraintLayout>