<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@drawable/ic_fingerprint_background">

  <Space
    android:id="@+id/spacer"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="172dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>

  <ImageView
    android:id="@+id/logoIv"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_logo_email"
    android:contentDescription="@string/phone_logo"
    app:layout_constraintBottom_toBottomOf="@id/spacer"
    app:layout_constraintBottom_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@id/spacer"/>

  <Button
    android:id="@+id/backBt"
    android:layout_width="@dimen/menu_element_square_size"
    android:layout_height="@dimen/menu_element_square_size"
    android:layout_marginTop="24dp"
    android:layout_marginStart="24dp"
    android:background="@drawable/ic_close_36dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>

  <LinearLayout
    android:id="@+id/llRootMiddle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:gravity="center"
    android:orientation="vertical"
    app:layout_constraintBottom_toTopOf="@id/saveBt"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/logoIv">

    <TextView
      android:id="@+id/titleTv"
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:layout_marginBottom="8dp"
      android:gravity="center"
      android:text="@string/code_sent_to_email"
      android:textColor="@android:color/white"
      android:textSize="@dimen/subtitle_text_size"/>

    <TextView
      android:id="@+id/cancelTv"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:layout_gravity="center"
      android:gravity="center"
      android:text="@string/change_email_address"
      android:textColor="@color/lightBlue"
      android:textSize="@dimen/subtitle_text_size"
      />

    <LinearLayout
      android:id="@+id/holdersLl"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:focusable="auto"
      android:gravity="center"
      android:orientation="horizontal"
      tools:ignore="LabelFor">

      <EditText
        android:id="@+id/digit1Et"
        style="@style/DigitHolderStyle"
        android:tag="@string/_0"
        android:text=""/>

      <EditText
        android:id="@+id/digit2Et"
        style="@style/DigitHolderStyle"
        android:tag="@string/_1"
        android:text=""/>

      <EditText
        android:id="@+id/digit3Et"
        style="@style/DigitHolderStyle"
        android:tag="@string/_2"
        android:text=""/>

      <EditText
        android:id="@+id/digit4Et"
        style="@style/DigitHolderStyle"
        android:imeOptions="actionDone"
        android:tag="@string/_3"
        android:text=""/>

    </LinearLayout>

  </LinearLayout>

  <Button
    android:id="@+id/verifyBt"
    android:layout_width="@dimen/content_width"
    android:layout_height="@dimen/button_height"
    android:layout_marginBottom="32dp"
    android:paddingStart="60dp"
    android:paddingEnd="60dp"
    android:background="@drawable/button_rounded_green"
    android:drawableStart="@drawable/ic_verify_lock_icon"
    android:text="@string/verify_email"
    android:textAllCaps="false"
    android:textColor="@android:color/white"
    android:textSize="@dimen/button_text_size"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"/>

  <ProgressBar
    android:id="@+id/progressBar"
    style="?android:attr/progressBarStyle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:indeterminateTint="@android:color/white"
    android:visibility="gone"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>

</android.support.constraint.ConstraintLayout>