<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content">

  <ImageView
    android:id="@+id/imageView2"
    android:layout_width="64dp"
    android:layout_height="64dp"
    android:layout_marginTop="8dp"
    android:background="@drawable/ic_fingerprint_red"
    android:contentDescription="@string/secureid"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>

  <TextView
    android:id="@+id/titleTv"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:text="@string/touch_id_for_quot_kimlic_quot"
    android:textColor="@color/grayDark"
    android:textSize="@dimen/title_text_size"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/imageView2"/>

  <TextView
    android:id="@+id/risksTv"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:text="@string/sign_in_with_your_touch_id"
    android:textColor="@color/grayDark"
    android:textSize="@dimen/subtitle_text_size"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/titleTv"/>

  <LinearLayout
    android:id="@+id/rootLower"
    android:layout_width="@dimen/popup_fragment_width"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:orientation="vertical"
    app:layout_constraintTop_toBottomOf="@id/risksTv">

    <View
      android:layout_width="match_parent"
      android:layout_height="2dp"
      android:background="@color/grayLight"/>

    <Button
      android:id="@+id/cancelBt"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@android:color/transparent"
      android:text="@string/cancel"
      android:textSize="@dimen/subtitle_text_size"
      android:textAllCaps="false"
      android:textColor="@color/grayDark"/>

  </LinearLayout>

</android.support.constraint.ConstraintLayout>